templates/leantime_template.yaml
---
# Source: leantime/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-leantime
  labels:
    helm.sh/chart: leantime-0.1.2
    app.kubernetes.io/name: leantime
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.1.7"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9000
      targetPort: http
      protocol: TCP
      name: 9000-udp
  selector:
    app.kubernetes.io/name: leantime
    app.kubernetes.io/instance: release-name
---
# Source: leantime/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-leantime
  labels:
    helm.sh/chart: leantime-0.1.2
    app.kubernetes.io/name: leantime
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.1.7"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: leantime
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: leantime
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
      - name: release-name-leantime
        image: "ghcr.io/nicholaswilde/leantime:2.1.7-ls6"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: 9000-udp
          containerPort: 9000
          protocol: TCP
        volumeMounts:
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
---
# Source: leantime/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-leantime
  labels:
    helm.sh/chart: leantime-0.1.2
    app.kubernetes.io/name: leantime
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.1.7"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "leantime.192.168.1.203.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-leantime
                port:
                  number: 80
